<resources>
    <string name="app_name">Mars</string>
    <string name="CompanyWeb">www.itcurves.us</string>
    <string name="about_text">Hi, Welcome to Mars\nWe commit to serve you\nAny Car, Anytime, Anywhere\nConvenience and Safety with Privacy.</string>
    <string name="version">App Version: %s</string>
    <string name="SendEmailUsing">Send email using #8230;</string>
    <string name="invalid_firstname_length">First name too short</string>
    <string name="invalid_password_length">Please enter 4 digit PIN</string>
    <string name="invalid_password_match">PIN do not match</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_tip_amount">Invalid Tip Amount\nPlease Enter in the format 00.00</string>
    <string name="invalid_response">Invalid %s Response</string>
    <string name="choose_greater_time">Please choose a date-time greater than current time</string>
    <string name="choose_lesser_time">Please choose a date-time not later than %d Days</string>
    <string name="clientservice_success_post_driversignup">Successfully created account</string>
    <string name="enable_gps_text">Please enable Wi-Fi and Location Services (GPS) to improve your location.</string>
    <string name="enable_wifi_text">Please enable Wi-Fi to improve your location</string>
    <string name="start_maps">We recommend to start google Maps application to improve accuracy of your location.\nDo you want to continue ?</string>
    <string name="enable_wifigps_title">Improve your location</string>
    <string name="enable_gps_title">Enable GPS</string>
    <string name="status">Status:</string>
    <string name="vehicle">Vehicle:</string>
    <string name="driver">Driver:</string>
    <string name="drivernumber">Driver Num :</string>
    <string name="driverwaiting">Driver waiting outside</string>
    <string name="No_booked_rides">No booked trips</string>
    <string name="trip">Trip</string>
    <string name="current_trip">Current Trip</string>
    <string name="track">TRACKING VEHICLE</string>
    <string name="saved_locations">Favorite Addresses</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="Call">Call</string>
    <string name="creditCards">Credit Card</string>
    <string name="PayInCab">I\'ll pay in cab</string>
    <string name="PayWithVoucher">I\'ll pay by Prepaid Account   |   %s</string>
    <string name="Paywith">I\'ll pay by %s</string>
    <string name="PayingInCab">Paying in cab</string>
    <string name="Call_driver">Call driver</string>
    <string name="Booking_Status">Trip Request Status</string>
    <string name="Booking_Id">Booking ID</string>
    <string name="Initial_Charges">Initial Charges: %s</string>
    <string name="per_unit_Charges">Subsequent Charges: </string>
    <string name="Now">NOW</string>
    <string name="Later">LATER</string>
    <string name="OK">OK</string>
    <string name="other_info">Other Info</string>
    <string name="SUBMIT">Submit</string>
    <string name="Save">Save</string>
    <string name="Yes">YES</string>
    <string name="No">NO</string>
    <string name="Cancel">"Cancel"</string>
    <string name="Skip">Skip</string>
    <string name="Enter_Your">Enter Your %s</string>
    <string name="pick_now">PICK NOW</string>
    <string name="pick_later">PICK LATER</string>
    <string name="Pick_up_time">PICK UP TIME:</string>
    <string name="Pick_up_date">PICK UP DATE:</string>
    <string name="Repeat_password">Repeat Password</string>
    <string name="New_password">Create 4 digit password</string>
    <string name="Repeat_New_password">Repeat New Password</string>
    <string name="Full_name">Full Name</string>
    <string name="Phone_number">Phone Number</string>
    <string name="showNumber">Allow Number to be visible to Driver for contact</string>
    <string name="Forgot_Password">Forgot PIN ?</string>
    <string name="capacity">capacity:</string>
    <string name="Sign_in">Sign in</string>
    <string name="Sign_up">Sign up</string>
    <string name="Email">EMAIL</string>
    <string name="OR">OR</string>
    <string name="Signed_in_as">Signed in as:</string>
    <string name="Hailing_cab">Hailing Cab&#133;</string>
    <string name="No_Internet_Connectivity">No internet connectivity</string>
    <string name="Network_Error">Network error \nPlease try again</string>
    <string name="Unknown_Error">Unknown error \nPlease try later</string>
    <string name="continue_to_track_cab">continue to track cab</string>
    <string name="username">USER NAME</string>
    <string name="password">Enter 4 digit PIN</string>
    <string name="login_signin">SIGN IN</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="pickedup">PICKEDUP</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="promotions">Promotions</string>
    <string name="pickup">Pickup</string>
    <string name="drop">Dropoff</string>
    <string name="pickme">PICK UP FROM</string>
    <string name="dropme">DROP OFF LOCATION ? (optional)</string>
    <string name="imready">I\'m ready </string>
    <string name="imreadynow">I\'m ready now.</string>
    <string name="sendme">Send me</string>
    <string name="nearestcab">the nearest cab</string>
    <string name="chooseVehicleType">Tap here to select Vehicle/Service type</string>
    <string name="cabfrom">%1$s from %2$s</string>
    <string name="yourfare">Your fare estimate is %s</string>
    <string name="select_pickup_point">Select Pickup Point</string>
    <string name="select_destination">Select Destination</string>
    <string name="Choose_Pickup">Choose Pickup</string>
    <string name="Choose_Destination">Please choose Drop Off address.</string>
    <string name="TripHistory">Recent Addresses</string>
    <string name="trip_receipt_">Trip receipt</string>
    <string name="Satellite">Satellite</string>
    <string name="Info">Information</string>
    <string name="SoftwareUpdate">Software Update.</string>
    <string name="ETA">ETA: %s</string>
    <string name="ETD">ETD: %s</string>
    <string name="contact_backoffice">Please contact back office</string>
    <string name="query_c">QUERY:</string>
    <string name="address">ADDRESS:</string>
    <string name="No_favorites">No Favorites</string>
    <string name="Add_favorite">Add To Favorites</string>
    <string name="RemoveFavourite">Remove From Favorites</string>
    <string name="EnterPromoCode">Enter Promo Code Here</string>
    <string name="AddTip">Add Tip Please</string>
    <string name="PromotionCode">Code</string>
    <string name="FlatTip">Flat Tip</string>
    <string name="Remove">Remove</string>
    <string name="Address_Name">Address Name</string>
    <string name="Street_Address">Street Address</string>
    <string name="about">About Us</string>
    <string name="about_us"><u>About Us</u></string>
    <string name="secret_answer">Provide a Secret Answer</string>
    <string name="secret_question">Secret Question</string>
    <string name="Rate_ride">Rate ride</string>
    <string name="ShareExperience">Share Your Experience</string>
    <string name="Price_Chart">Price Chart</string>
    <string name="Hail">Hail</string>
    <string name="Sign_out">Sign Out</string>
    <string name="Signing_in_ppp">Signing in#8230;</string>
    <string name="Booking_Success">Your Trip is booked Successfully.\n Confirmation No: %s</string>
    <string name="Cancel_ride">Cancel Booking</string>
    <string name="Confirm_Cancel">YOU ARE ABOUT TO CANCEL THIS BOOKING. ARE YOU SURE?</string>
    <string name="Confirm_Delete">ARE YOU SURE ABOUT THIS DELETION ?</string>
    <string name="GetMeTaxi">Get me taxi</string>
    <string name="No_driver_assigned">No driver assigned</string>
    <string name="Finding_Cab">Searching for drivers.</string>
    <string name="ContactingDriver">Contacting driver.</string>
    <string name="AllowNumberVisible">Allow Number to be visible to Driver for contact</string>
    <string name="No_vehicle_available">No vehicle available right now, add to wait list ?</string>
    <string name="No_nearbyvehicle_available">No nearby vehicle available.</string>
    <string name="Promotions_Available">Promotions Available!</string>
    <string name="No_Promotions_Available">No Promotions Available</string>
    <string name="No_driver_available">No driver available, would you like to be on wait list ?</string>
    <string name="Exit_Application">EXIT APPLICATION ?</string>
    <string name="job_dispatched">Your trip has been assigned to a driver!\nDriver is on his way to pick you up.</string>
    <string name="Restart_Phone">Please restart your phone</string>
    <string name="job_status_closed">CLOSED</string>
    <string name="job_status_canceled">CANCELED</string>
    <string name="distance">Distance</string>
    <string name="cost">Cost: %s (approx)</string>
    <string name="fairEstimate">Fair Estimate:<u> %s </u></string>
    <string name="gettingFairEstimate">Getting Fair Estimate…</string>
    <string name="Report_problem">REPORT PROBLEM</string>
    <string name="Register">REGISTER</string>
    <string name="RegisterAgain">REGISTER AGAIN</string>
    <string name="getting_address">Getting Address …</string>
    <string name="coming_soon">COMING SOON!</string>
    <string name="unknown_address">Unknown address, Please try again.</string>
    <string name="verify_sms_part_1">Waiting for SMS verification for Ph No: </string>
    <string name="verify_sms_part_2">"Please make sure you have a working SMS plan.\n\n\nSit back and relax. We'll notify you when we're done verifying."</string>
    <string name="verify_sms">Verify</string>
    <string name="verify_sms_failed">SMS verification failed.</string>
    <string name="verify_sms_manual_header_2">%s has sent you a Verification code at</string>
    <string name="experience">%s Yrs</string>
    <string name="verify_sms_manual">Please Enter the 6-digit verification code Manually.</string>
    <string name="verify_sms_manual_header">MANUAL VERIFICATION</string>
    <string name="Service_Quality">Service Quality</string>
    <string name="Cleanliness">Cleanliness</string>
    <string name="Etiquettes">Etiquettes</string>
    <string name="TaxiOnTime">Taxi on time</string>
    <string name="Completed">COMPLETED</string>
    <string name="Share">Share</string>
    <string name="Comments">Comments</string>
    <string name="ProvideFeedback">Please enter your feedback</string>
    <string name="ProvideDrivernumber">Please Provide Driver Number</string>
    <string name="ProvideAddressName">Please Provide Address Name</string>
    <string name="feedback">Feedback</string>
    <string name="SendFeedback">Send Feedback</string>
    <string name="ReportBug">Report a bug</string>
    <string name="RequestFeature">Request a new feature</string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="promos_ready">Your promos ready for use</string>
    <string name="Points">Points: %s</string>
    <string name="rewardLoyaltyPoints">Your rewards and loyalty points</string>
    <string name="gotCreditFromFriends">You got credit from your following friends</string>
    <string name="ExpiryPoints">Expiry: %s</string>
    <string name="promo_type">Type</string>
    <string name="balance">Balance:</string>
    <string name="expiry">Expiry</string>
    <string name="Code">Code:</string>
    <string name="promo_balance">Promo Balance</string>
    <string name="Book_Trip">Book Trip</string>
    <string name="perTrip">Per Trip:</string>
    <string name="MyPromos">My\nPromos</string>
    <string name="airport_drop_note">For airport dropoff %s hours advance pickup required.</string>
    <string name="getting_available_promotions">Getting Available Promotions</string>
</resources>