<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyscale_4"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5.0dp">

        <Button
            android:id="@+id/btn_later_OK"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:onClick="DoneTime"
            android:text="@string/OK"
            android:textSize="@dimen/size14"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/Pick_up_time"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_later_Cancel"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:onClick="CancelTime"
            android:text="@string/Cancel"
            android:textSize="@dimen/size14"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_airport_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/airport_drop_note"
        android:textColor="@color/black"
        android:textSize="@dimen/size10" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:descendantFocusability="beforeDescendants" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10.0dp"
            android:layout_weight="1.0"
            android:calendarViewShown="false" />
    </LinearLayout>

</LinearLayout>